# AAC

./: # Code Citations.md  .coveragerc  .editorconfig  .env.example  .env.production  .env.template  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  50_arbitrage_strategies.csv  AAC 5 Things to do now March 18-26.txt  AAC_150_GAPS_AUDIT_REPORT.md  AAC_ARCHITECTURE_REWORK_PLAN.md  AAC_AUTO_LAUNCH.bat  AAC_COMPREHENSIVE_GAP_ANALYSIS.md  AAC_CONSOLIDATION_FINAL_REPORT.md  AAC_CONSOLIDATION_REPORT.md  AAC_MAINFRAME_README.md  AAC_SUPPLEMENTAL_GAPS_REPORT.md  AAC_SYSTEM_VALIDATION_REPORT.md  AAC_USER_GUIDE_AND_AUDIT_REPORT.md  AGENTS.md  AUTOMATION_README.md  AWS_SETUP_README.md  CHANGELOG.md  CONTRIBUTING.md  DESKTOP_ICON_README.md  Dockerfile  ENTERPRISE_ANALYSIS_REPORT.md  FILESYSTEM_OPTIMIZATION_PLAN.md  LAUNCH_CHECKLIST.md  LAUNCH_ROADMAP.md  LFGCC!.bat  LFGCC_DASHBOARD!.bat  MASTER_TRADING_PLAN_Q2_Q3_2026.md  METALLICUS_INTEGRATION_PLAN.md  MIGRATION_GUIDE.md  Makefile  (+77 more)
.context/: README.md  STATUS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SINGLE_LAUNCHER_RULE.md  copilot-instructions.md
.streamlit/: config.toml
Agent_University/: 300_financial_agent_insights.md  agent_university_overview.md
BigBrainIntelligence/: __init__.py  agents.py  bigbrain_intelligence_advanced_state.py  requirements.txt  research_agent.py  xpr_intelligence_agent.py
CentralAccounting/: __init__.py  database.py  financial_analysis_engine.py  pnl_tracker.py
ComplianceArbitrageDivision/: __init__.py
CorporateBankingDivision/: __init__.py
CryptoIntelligence/: README.md  __init__.py  crypto_bigbrain_integration.py  crypto_intelligence_engine.py  crypto_technical_patterns.py  defi_yield_analyzer.py  mev_protection_system.py  onchain_analysis_engine.py  scam_detection.py  whale_tracking_system.py
Doctrine_Implementation/: Theater_B.ps1  Theater_C.ps1  Theater_D.ps1
HR_Division/: demo.py  hr_division_overview.md  organizational_structure.md
InternationalInsuranceDivision/: __init__.py
OptionsArbitrageDivision/: options_arbitrage_strategy.py
PaperTradingDivision/: order_simulator.py  paper_account_manager.py  paper_trading_premium_strategy.py
QuantitativeArbitrageDivision/: __init__.py
QuantitativeResearchDivision/: __init__.py
RiskManagementDivision/: __init__.py
SharedInfrastructure/: README.md  __init__.py  alert_manager.py  audit_logger.py  health_checker.py  incident_manager.py  metrics_collector.py  security_monitor.py  system_monitor.py
TechnologyInfrastructureDivision/: __init__.py
TradingExecution/: README.md  __init__.py  execution_engine.py  models.py  order_manager.py  position_tracker.py  requirements.txt  risk_manager.py  signal_executor.py  trading_config.yaml  trading_engine.py
_archive/: _audit_keys.py  _buy_owl_put.py  _check_all.py  _check_moomoo_owl.py  _check_owl_order.py  _count_gamma.py  _cross_asset_seesaw.py  _debug_plankton.py  _debug_sig.py  _derive_creds_eoa.py  _dry_run_scan.py  _find_owl_jan27.py  _find_stub_returns.py  _full_import_test.py  _gap_fixer.py  _gap_scan_v2.py  _gap_scanner.py  _get_pip_bootstrap.py  _ibkr_live_prices.py  _moomoo_deploy_options.py  _moomoo_status.py  _owl_expiries.py  _place_puts.py  _place_week1_day2.py  _poly_summary.txt  _polymarket_scenario_bets.py  _polymarket_scenario_bets_v2.py  _price_puts.py  _run_cycle_test.py  _scan_keys.py  _scan_realistic_strikes.py  _scan_strikes.py  _scout_ndax.py  _seesaw_scan.txt  _sell_ndax.py  _test_clob_filters.py  _test_gamma_api.py  _test_gamma_events.py  _test_ibkr_live.py  _test_moomoo_live.py  (+19 more)
aac/: __init__.py
agent_jonny_bravo_division/: __init__.py  jonny_bravo_agent.py
agents/: AAC_AGENT_CONSOLIDATION_REPORT.md  MASTER_AGENT_AUDIT_REPORT.md  __init__.py  aac_agent_consolidation.json  aac_agent_consolidation.py  agent_audit.py  agent_based_trading.py  agent_based_trading_integration.py  agent_files.txt  api_key_agent.py  avatar_system.py  master_agent_file.py  metal_dao_governance_agent.py  planktonxd_browser_bot.py  planktonxd_browser_bot_config.py  polymarket_agent.py
archive/: aac_agent_cleanup.py  aac_monitoring_dashboard.DEPRECATED.py  agent_based_trading_validation.py  main.py  monitoring_dashboard.ORPHANED.py  monitoring_launcher.DEPRECATED.py  strategy_testing_lab.py  strategy_testing_lab_clean.py
assets/: aac_icon_config.txt
config/: .key_encryption_key  __init__.py  aac_config.py  account_balances.py  config.yaml  doctrine_pack_1_risk_envelope.yaml  doctrine_pack_8_metrics.yaml  doctrine_packs.yaml  lde_channels.json  rag.yaml  settings.json  strategy_department_matrix.yaml  strategy_parameters.yaml  trading_mode_presets.py  watchlist.yaml
core/: README.md  __init__.py  aac_automation_engine.py  aac_master_launcher.py  acc_advanced_state.py  auto_trader.py  autonomous_engine.py  command_center.py  command_center_interface.py  daily_recommendation_engine.py  eod_reporter.py  execution_throttle.py  market_scheduler.py  orchestrator.py  order_monitor.py  position_reconciler.py  sub_agent_spawner.py  unified_component_integrator.py  unified_risk.py
councils/: __init__.py  trust.py
data/: __init__.py  barren_wuffet_memory.json  command_center_baselines.json  final_metrics.json  operational_baselines.json  sample_reddit_data.json  sample_reddit_data_fixed.json
demos/: aac_reddit_hot_posts_demo.py  aac_timestamp_integration_demo.py  market_data_demo.py  multi_source_arbitrage_demo.py  strategy_execution_demo.py  worldwide_arbitrage_demo.py  worldwide_arbitrage_demo_fixed.py
deployment/: aac_deployment_engine.py  deploy_aac_system.py  deploy_financial_infrastructure.py  deploy_production.py  production_deployment_system.py  production_readiness_integration.py
divisions/: __init__.py  division_protocol.py  enterprise.py
docker/: Dockerfile.planktonxd
docs/: AAC_2100_DOCTRINE_PACKS_COMPLETE.md  AAC_2100_IMPLEMENTATION_ROADMAP.md  AAC_2100_INTEGRATION_PLAN.md  AAC_2100_RECONSTRUCTION_COMPLETION_REPORT.md  AAC_2100_RECONSTRUCTION_PLAN.md  AAC_2100_UNIFIED_KNOWLEDGE_BASE.md  AAC_ALGOTRADING101_CONFIG_GUIDE.md  (+33 more)
(+1493 files in other folders)
