[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aac"
version = "2.0.0"
description = "Accelerated Arbitrage Corp — AI-driven multi-exchange trading system"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
    { name = "Resonance Energy Corp", email = "ops@resonanceenergy.corp" },
]
keywords = ["trading", "arbitrage", "fintech", "crypto", "ai", "quantitative"]

# ── Core runtime dependencies ──────────────────────────────────────────────────
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ccxt>=4.2.0",
    "yfinance>=0.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "web3>=6.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "xgboost>=2.0.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
    "dash>=2.14.0",
    "plotly>=5.17.0",
    "dash-bootstrap-components>=1.5.0",
    "praw>=7.7.0",
    "apscheduler>=3.10.0",
    "textblob>=0.17.0",
    "kafka-python>=2.0.2",
    "redis>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
# ML extras (large downloads — optional)
ml = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "gymnasium>=0.29.0",
]

# Dev tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "ruff>=0.1.0",
]

# Production extras
prod = [
    "prometheus-client>=0.18.0",
    "confluent-kafka>=2.3.0",
    "hiredis>=2.3.0",
]

[project.scripts]
# Entry points — run from command line after `pip install -e .`
aac-launch     = "core.aac_master_launcher:main"
aac-dashboard  = "monitoring.aac_master_monitoring_dashboard:main"
aac-paper      = "trading.paper_trading_validation:main"
aac-setup      = "scripts.setup_production:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "shared*",
    "strategies*",
    "TradingExecution*",
    "BigBrainIntelligence*",
    "CentralAccounting*",
    "CryptoIntelligence*",
    "monitoring*",
    "trading*",
    "integrations*",
    "core*",
    "deployment*",
    "agents*",
    "tools*",
    "demos*",
    "reddit*",
    "models*",
    "docs*",
]
exclude = [
    "tests*",
    "archive*",
    "version_control*",
    "aac*",
    "build*",
    "dist*",
]

# ── Tool configs ───────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py312", "py313", "py314"]
extend-exclude = '''
/(
    \.venv
  | archive
  | version_control
  | aac/aac069
  | aac/NCC
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".venv/*", "archive/*", "version_control/*", "aac/aac069/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "archive", "version_control", "aac/aac069"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line-length handled by black

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = [".venv/", "archive/", "version_control/", "aac/aac069/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: requires live API credentials",
    "integration: requires external service",
    "slow: runtime > 5s",
    "paper: paper-trading mode",
    "exchange: requires exchange API",
]
