[metadata]
name = aac
version = attr: aac.__version__

[options]
zip_safe = False
python_requires = >=3.9

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-timeout>=2.2.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.1.0
    ruff>=0.1.0
    mypy>=1.5.0

[flake8]
max-line-length = 100
extend-ignore = E501,W503
exclude =
    .venv,
    archive,
    version_control,
    aac/aac069,
    aac/NCC,
    build,
    dist
