[metadata]
name = aac
version = 2.7.0

[options]
zip_safe = False
python_requires = >=3.9

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-timeout>=2.2.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.1.0
    ruff>=0.1.0
    mypy>=1.5.0

[flake8]
max-line-length = 120
extend-ignore =
    E126,E127,E128,E129,E131,
    E203,E301,E302,E303,E401,E402,
    E501,E711,E712,E721,E722,E731,
    F401,F403,F405,F541,F811,F841,
    W191,W291,W292,W293,W391,W503,W504,
    W605,W0613
exclude =
    .venv,
    archive,
    version_control,
    aac/aac069,
    aac/NCC,
    build,
    dist,
    __pycache__,
    aac.egg-info
